--- a/index.html
+++ b/index.html
@@ -24,12 +24,27 @@
                 <div class="d-flex flex-wrap justify-content-center justify-content-md-between align-items-center">
                     <small class="text-center">© 2021 - 2022. All rights of this site belong to Infinity Tech
                         company.</small>
-                    <div class="text-white">
-                        <i class="bi bi-instagram me-3"></i>
-                        <i class="bi bi-linkedin me-3"></i>
-                        <i class="bi bi-twitter me-3"></i>
-                        <i class="bi bi-youtube me-3"></i>
-                        <i class="bi bi-facebook"></i>
+                    <div class="d-inline-flex mt-3 mt-md-0">
+                        <a class="d-inline-flex text-decoration-none text-white me-3" href="http://google.com"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        <a class="d-inline-flex text-decoration-none text-white me-3" href="http://google.com"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
+                        <a class="d-inline-flex text-decoration-none text-white me-3" href="http://google.com"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-twitter"></i>
+                        </a>
+                        <a class="d-inline-flex text-decoration-none text-white me-3" href="http://google.com"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-youtube"></i>
+                        </a>
+                        <a class="d-inline-flex text-decoration-none text-white" href="http://google.com"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-facebook"></i>
+                        </a>
                     </div>
                 </div>
             </div>
