--- a/index.html
+++ b/index.html
@@ -14,9 +14,54 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-transparent">
+            <div class="container">
+                <a class="navbar-brand me-0 d-inline-flex align-items-center" href="./index.html">
+                    <img width="40" height="30" src="./images/logo.png" alt="logo image">
+                    <span class="fs-6 text-uppercase ms-1">infinity tech</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item mx-2">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Weblog</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Comments</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">about us</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">contact us</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Work with us</a>
+                        </li>
+                        <li class="nav-item mx-2 dropdown">
+                            <a class="nav-link dropdown-toggle py-1" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                En
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li><a class="dropdown-item" href="#">Ar</a></li>
+                                <li><a class="dropdown-item" href="#">Fa</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main>
-
     </main>
     <footer>
         <div class="copyright py-3">
