--- a/index.html
+++ b/index.html
@@ -422,7 +422,122 @@
                     <i class="bi bi-chevron-right"></i>
                 </div>
             </section>
+            <section class="row gy-4">
+                <div class="col-lg-6">
+                    <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
+                        <div class="col-sm-6 pe-sm-3">
+                            <div class="ratio ratio-16x9 h-100">
+                                <img src="./images/center-1.png" class="img-fluid rounded-1 object-fit-cover"
+                                    alt="blog image">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
+                            <h5 class="fw-bold mb-0 line-clamp-1">Why do we get depressed?</h5>
+                            <p class="mb-0 line-clamp-3">
+                                Depression is one of the most common mental disorders that affects many people
+                                temporarily...
+                            </p>
+                            <div
+                                class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
+                                <div class="d-flex align-items-start">
+                                    <i class="bi bi-calendar4"></i>
+                                    <small class="ms-2">2022/04/02</small>
+                                </div>
+                                <small>00:33</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
+                        <div class="col-sm-6 pe-sm-3">
+                            <div class="ratio ratio-16x9 h-100">
+                                <img src="./images/center-1.png" class="img-fluid rounded-1 object-fit-cover"
+                                    alt="blog image">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
+                            <h5 class="fw-bold mb-0 line-clamp-1">Hair loss in women</h5>
+                            <p class="mb-0 line-clamp-3">
+                                Hair loss in women has various causes. Sometimes women's hair loss is temporary and
+                                recovers...
+                            </p>
+                            <div
+                                class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
+                                <div class="d-flex align-items-start">
+                                    <i class="bi bi-calendar4"></i>
+                                    <small class="ms-2">2022/06/03</small>
+                                </div>
+                                <small>17:23</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
+                        <div class="col-sm-6 pe-sm-3">
+                            <div class="ratio ratio-16x9 h-100">
+                                <img src="./images/center-1.png" class="img-fluid rounded-1 object-fit-cover"
+                                    alt="blog image">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
+                            <h5 class="fw-bold mb-0 line-clamp-1">The best way to treat arthritis</h5>
+                            <p class="mb-0 line-clamp-3">
+                                Knee arthritis is a common complication that can happen at any age; But its
+                                prevalence...
+                            </p>
+                            <div
+                                class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
+                                <div class="d-flex align-items-start">
+                                    <i class="bi bi-calendar4"></i>
+                                    <small class="ms-2">2022/11/03</small>
+                                </div>
+                                <small>09:14</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
+                        <div class="col-sm-6 pe-sm-3">
+                            <div class="ratio ratio-16x9 h-100">
+                                <img src="./images/center-1.png" class="img-fluid rounded-1 object-fit-cover"
+                                    alt="blog image">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
+                            <h5 class="fw-bold mb-0 line-clamp-1">Kidney stone diet</h5>
+                            <p class="mb-0 line-clamp-3">
+                                Kidney stone diet plays an important role in its occurrence and prevention. Especially
+                                if you...
+                            </p>
+                            <div
+                                class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
+                                <div class="d-flex align-items-start">
+                                    <i class="bi bi-calendar4"></i>
+                                    <small class="ms-2">2022/04/16</small>
+                                </div>
+                                <small>08:30</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- End weblog -->
+            <!-- Start Email Subscription -->
+            <section class="subscription">
+                <div class="email-subscription">
+                    <h5 class="fw-bold text-center text-capitalize mb-4">Enter your email address and receive our latest
+                        news</h5>
+                    <div class="d-flex align-items-center mt-2">
+                        <input type="email" class="form-control me-3 rounded-3 border-0"
+                            placeholder="Your e-mail addres" aria-label="Your e-mail addres">
+                        <button type="button" class="btn btn-primary rounded-3">send</button>
+                    </div>
+                </div>
+            </section>
+            <!-- End Email Subscription -->
         </section>
     </main>
     <footer>
