update index and style

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                     <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
                         <div class="col-sm-6 pe-sm-3">
                             <div class="ratio ratio-16x9 h-100">
-                                <img src="./images/center-1.png" class="img-fluid rounded-1 object-fit-cover"
+                                <img src="./images/blog-1.png" class="img-fluid rounded-1 object-fit-cover"
                                     alt="blog image">
                             </div>
                         </div>
@@ -452,7 +452,7 @@
                     <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
                         <div class="col-sm-6 pe-sm-3">
                             <div class="ratio ratio-16x9 h-100">
-                                <img src="./images/center-1.png" class="img-fluid rounded-1 object-fit-cover"
+                                <img src="./images/blog-2.png" class="img-fluid rounded-1 object-fit-cover"
                                     alt="blog image">
                             </div>
                         </div>
@@ -477,7 +477,7 @@
                     <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
                         <div class="col-sm-6 pe-sm-3">
                             <div class="ratio ratio-16x9 h-100">
-                                <img src="./images/center-1.png" class="img-fluid rounded-1 object-fit-cover"
+                                <img src="./images/blog-3.png" class="img-fluid rounded-1 object-fit-cover"
                                     alt="blog image">
                             </div>
                         </div>
@@ -502,7 +502,7 @@
                     <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
                         <div class="col-sm-6 pe-sm-3">
                             <div class="ratio ratio-16x9 h-100">
-                                <img src="./images/center-1.png" class="img-fluid rounded-1 object-fit-cover"
+                                <img src="./images/blog-4.png" class="img-fluid rounded-1 object-fit-cover"
                                     alt="blog image">
                             </div>
                         </div>
