--- a/index.html
+++ b/index.html
@@ -81,66 +81,80 @@
                     <i class="bi bi-chevron-right"></i>
                 </div>
             </section>
-            <div class="row gy-4 mb-4">
-                <div class="col-md-6 col-lg-8">
-                    <figure class="d-flex treatments-card position-relative mb-0 h-100">
-                        <img src="./images/treatments-1.png" class="img-fluid rounded-3 object-fit-cover"
-                            alt="card-treatments">
-                        <figcaption class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
-                            Dental
-                        </figcaption>
-                    </figure>
+        </section>
+        <div class="treatments-intro">
+            <div class="background-image-blur treatments-background"></div>
+            <div class="container">
+                <div class="row gy-4 mb-4">
+                    <div class="col-md-6 col-lg-8">
+                        <figure class="d-flex treatments-card position-relative mb-0 h-100">
+                            <img src="./images/treatments-1.png" class="img-fluid rounded-3 object-fit-cover"
+                                alt="card-treatments">
+                            <figcaption
+                                class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
+                                Dental
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-6 col-lg-4 d-grid">
+                        <figure class="d-flex treatments-card position-relative mb-4">
+                            <img src="./images/treatments-2.png" class="img-fluid rounded-3" alt="card-treatments">
+                            <figcaption
+                                class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
+                                Cardio surgery
+                            </figcaption>
+                        </figure>
+                        <figure class="d-flex treatments-card position-relative mb-0">
+                            <img src="./images/treatments-3.png" class="img-fluid rounded-3" alt="card-treatments">
+                            <figcaption
+                                class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
+                                Orthopedics
+                            </figcaption>
+                        </figure>
+                    </div>
                 </div>
-                <div class="col-md-6 col-lg-4 d-grid">
-                    <figure class="d-flex treatments-card position-relative mb-4">
-                        <img src="./images/treatments-2.png" class="img-fluid rounded-3" alt="card-treatments">
-                        <figcaption class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
-                            Cardio surgery
-                        </figcaption>
-                    </figure>
-                    <figure class="d-flex treatments-card position-relative mb-0">
-                        <img src="./images/treatments-3.png" class="img-fluid rounded-3" alt="card-treatments">
-                        <figcaption class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
-                            Orthopedics
-                        </figcaption>
-                    </figure>
+                <div class="row gy-4">
+                    <div class="col-md-6 col-lg-3">
+                        <figure class="d-flex treatments-card position-relative mb-0 h-100">
+                            <img src="./images/treatments-4.png" class="img-fluid rounded-3" alt="card-treatments">
+                            <figcaption
+                                class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
+                                Ophthalmology
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <figure class="d-flex treatments-card position-relative mb-0 h-100">
+                            <img src="./images/treatments-5.png" class="img-fluid rounded-3" alt="card-treatments">
+                            <figcaption
+                                class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
+                                Neuro Surgery
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <figure class="d-flex treatments-card position-relative mb-0 h-100">
+                            <img src="./images/treatments-6.png" class="img-fluid rounded-3" alt="card-treatments">
+                            <figcaption
+                                class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
+                                Neuro Surgery
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <figure class="d-flex treatments-card position-relative mb-0 h-100">
+                            <img src="./images/treatments-7.png" class="img-fluid rounded-3" alt="card-treatments">
+                            <figcaption
+                                class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
+                                Obesity
+                            </figcaption>
+                        </figure>
+                    </div>
                 </div>
             </div>
-            <div class="row gy-4">
-                <div class="col-md-6 col-lg-3">
-                    <figure class="d-flex treatments-card position-relative mb-0 h-100">
-                        <img src="./images/treatments-4.png" class="img-fluid rounded-3" alt="card-treatments">
-                        <figcaption class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
-                            Ophthalmology
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <figure class="d-flex treatments-card position-relative mb-0 h-100">
-                        <img src="./images/treatments-5.png" class="img-fluid rounded-3" alt="card-treatments">
-                        <figcaption class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
-                            Neuro Surgery
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <figure class="d-flex treatments-card position-relative mb-0 h-100">
-                        <img src="./images/treatments-6.png" class="img-fluid rounded-3" alt="card-treatments">
-                        <figcaption class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
-                            Neuro Surgery
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <figure class="d-flex treatments-card position-relative mb-0 h-100">
-                        <img src="./images/treatments-7.png" class="img-fluid rounded-3" alt="card-treatments">
-                        <figcaption class="fs-6 fw-bold py-2 text-white text-center position-absolute bottom-0 w-100">
-                            Obesity
-                        </figcaption>
-                    </figure>
-                </div>
-            </div>
-            <!-- End Available treatments -->
+        </div>
+        <!-- End Available treatments -->
+        <section class="container">
             <!-- Start Health centers -->
             <h5 class="header lh-xl fw-bold mb-0">
                 Health centers
