--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </section>
         </section>
-        <div class="treatments-intro">
+        <div class="position-relative">
             <div class="background-image-blur treatments-background"></div>
             <div class="container">
                 <div class="row gy-4 mb-4">
@@ -269,7 +269,9 @@
             <!-- Start LinkedIn -->
             <img class="linkedin img-fluid rounded-3" src="./images/linkedin.png" alt="LinkedIn">
             <!-- End LinkedIn -->
-            <!-- Start Tourist places -->
+        </section>
+        <!-- Start Tourist places -->
+        <div class="container">
             <h5 class="header lh-xl fw-bold mb-0">
                 Tourist places
             </h5>
@@ -287,102 +289,110 @@
                     <i class="bi bi-chevron-right"></i>
                 </div>
             </section>
-            <div class="row gy-4 justify-content-center">
-                <div class="col-md-6 col-lg-4">
-                    <div class="card rounded-3 border-0">
-                        <div class="pt-3 px-3">
-                            <div class="ratio ratio-custom">
-                                <img src="./images/place-1.png" class="card-img-top rounded-1 object-fit-cover"
-                                    alt="tourist place">
+        </div>
+        <div class="position-relative">
+            <div class="background-image-blur tourist-background"></div>
+            <div class="container">
+                <div class="row gy-4 justify-content-center">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card rounded-3 border-0">
+                            <div class="pt-3 px-3">
+                                <div class="ratio ratio-custom">
+                                    <img src="./images/place-1.png" class="card-img-top rounded-1 object-fit-cover"
+                                        alt="tourist place">
+                                </div>
                             </div>
-                        </div>
-                        <div class="card-body text-capitalize">
-                            <h5 class="card-title">pars hospital</h5>
-                            <p class="card-text">
-                                It was established by the efforts of a group of young doctors who completed their
-                                specialized education in America and Europe.
-                            </p>
-                            <hr class="my-2" />
-                            <div class="d-flex align-items-center justify-content-between">
-                                <section class="d-flex align-items-start text-muted">
-                                    <i class="bi bi-geo-alt me-2"></i>
-                                    <small>Iran - Tehran</small>
-                                </section>
-                                <section class="d-flex">
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                </section>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <div class="card rounded-3 border-0">
-                        <div class="pt-3 px-3">
-                            <div class="ratio ratio-custom">
-                                <img src="./images/place-2.png" class="card-img-top rounded-1 object-fit-cover"
-                                    alt="tourist place">
-                            </div>
-                        </div>
-                        <div class="card-body text-capitalize">
-                            <h5 class="card-title">Bahman Hospital</h5>
-                            <p class="card-text">
-                                With less than ten years of experience and in the vicinity of famous hospitals, it has
-                                managed to have a well-known brand.
-                            </p>
-                            <hr class="my-2" />
-                            <div class="d-flex align-items-center justify-content-between">
-                                <section class="d-flex align-items-start text-muted">
-                                    <i class="bi bi-geo-alt me-2"></i>
-                                    <small>Iran - Tehran</small>
-                                </section>
-                                <section class="d-flex">
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                </section>
+                            <div class="card-body text-capitalize">
+                                <h5 class="card-title">pars hospital</h5>
+                                <p class="card-text">
+                                    It was established by the efforts of a group of young doctors who completed their
+                                    specialized education in America and Europe.
+                                </p>
+                                <hr class="my-2" />
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <section class="d-flex align-items-start text-muted">
+                                        <i class="bi bi-geo-alt me-2"></i>
+                                        <small>Iran - Tehran</small>
+                                    </section>
+                                    <section class="d-flex">
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning"></i>
+                                    </section>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <div class="card rounded-3 border-0">
-                        <div class="pt-3 px-3">
-                            <div class="ratio ratio-custom">
-                                <img src="./images/place-3.png" class="card-img-top rounded-1 object-fit-cover"
-                                    alt="tourist place">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card rounded-3 border-0">
+                            <div class="pt-3 px-3">
+                                <div class="ratio ratio-custom">
+                                    <img src="./images/place-2.png" class="card-img-top rounded-1 object-fit-cover"
+                                        alt="tourist place">
+                                </div>
+                            </div>
+                            <div class="card-body text-capitalize">
+                                <h5 class="card-title">Bahman Hospital</h5>
+                                <p class="card-text">
+                                    With less than ten years of experience and in the vicinity of famous hospitals, it
+                                    has
+                                    managed to have a well-known brand.
+                                </p>
+                                <hr class="my-2" />
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <section class="d-flex align-items-start text-muted">
+                                        <i class="bi bi-geo-alt me-2"></i>
+                                        <small>Iran - Tehran</small>
+                                    </section>
+                                    <section class="d-flex">
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning"></i>
+                                    </section>
+                                </div>
                             </div>
                         </div>
-                        <div class="card-body text-capitalize">
-                            <h5 class="card-title">Razavi Hospital</h5>
-                            <p class="card-text">
-                                Established in 2005 the facility covers 56,000 square metres and caters for patients
-                                with a wide range of medical conditions.
-                            </p>
-                            <hr class="my-2" />
-                            <div class="d-flex align-items-center justify-content-between">
-                                <section class="d-flex align-items-start text-muted">
-                                    <i class="bi bi-geo-alt me-2"></i>
-                                    <small>Iran - Razavi Khorasan</small>
-                                </section>
-                                <section class="d-flex">
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning me-1"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                </section>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card rounded-3 border-0">
+                            <div class="pt-3 px-3">
+                                <div class="ratio ratio-custom">
+                                    <img src="./images/place-3.png" class="card-img-top rounded-1 object-fit-cover"
+                                        alt="tourist place">
+                                </div>
+                            </div>
+                            <div class="card-body text-capitalize">
+                                <h5 class="card-title">Razavi Hospital</h5>
+                                <p class="card-text">
+                                    Established in 2005 the facility covers 56,000 square metres and caters for patients
+                                    with a wide range of medical conditions.
+                                </p>
+                                <hr class="my-2" />
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <section class="d-flex align-items-start text-muted">
+                                        <i class="bi bi-geo-alt me-2"></i>
+                                        <small>Iran - Razavi Khorasan</small>
+                                    </section>
+                                    <section class="d-flex">
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning me-1"></i>
+                                        <i class="bi bi-star-fill text-warning"></i>
+                                    </section>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- End Tourist places -->
+        </div>
+        <!-- End Tourist places -->
+        <section class="container">
             <!-- Start Our specialized health and tourism services -->
             <h5 class="header lh-xl fw-bold mb-0">
                 Our specialized health and tourism services
